--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,8 +23,6 @@ section, summary, time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	background-color: #000000;
-	color: #ffffff;
 	vertical-align: baseline;}
 
 article, aside, details, figcaption, figure,
@@ -101,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #000000;
+		background: #ffffff;
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -118,7 +116,7 @@ input, select, textarea {
 /* Type */
 
 	body, input, select, textarea {
-		color: #ffffff;
+		color: #585858;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 16pt;
 		font-weight: 300;
@@ -147,7 +145,7 @@ input, select, textarea {
 		-ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		transition: border-bottom-color 0.2s ease, color 0.2s ease;
 		text-decoration: none;
-		color: #ffffff;
+		color: #585858;
 		border-bottom: dotted 1px rgba(88, 88, 88, 0.5);
 	}
 
@@ -2457,8 +2455,8 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #ffffff;
-		color: #ffffff !important;
+		box-shadow: inset 0 0 0 2px #585858;
+		color: #585858 !important;
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
@@ -2530,7 +2528,7 @@ input, select, textarea {
 		button.primary,
 		.button.primary {
 			box-shadow: none;
-			background-color: #ffffff;
+			background-color: #585858;
 			color: #ffffff !important;
 		}
 
@@ -2708,19 +2706,19 @@ input, select, textarea {
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #ffafc1;
+				background-color: #f2849e;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #f30e97;
+				background-color: #7ecaf6;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #f30e97;
+				background-color: #7bd0c1;
 			}
 
 			.tiles article.style4 > .image:before {
-				background-color: #f30e97;
+				background-color: #c75b9b;
 			}
 
 			.tiles article.style5 > .image:before {
@@ -2728,7 +2726,7 @@ input, select, textarea {
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #f30e97;
+				background-color: #8499e7;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
@@ -2739,7 +2737,7 @@ input, select, textarea {
 			}
 
 				body:not(.is-touch) .tiles article:hover > .image:before {
-					background-color: #ffffff;
+					background-color: #333333;
 					opacity: 0.35;
 				}
 
@@ -2990,7 +2988,7 @@ input, select, textarea {
 		max-width: 80%;
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
-		background: #ffffff;
+		background: #585858;
 		color: #ffffff;
 		cursor: default;
 		visibility: hidden;
